cmake_minimum_required(VERSION 3.5 FATAL_ERROR)

project(crypto3-scaffold)

add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/libs/algebra")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/libs/block")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/libs/blueprint")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/libs/codec")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/libs/containers")
#add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/libs/ffi")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/libs/hash")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/libs/kdf")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/libs/mac")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/libs/marshalling/algebra")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/libs/marshalling/core")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/libs/marshalling/multiprecision")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/libs/marshalling/zk")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/libs/math")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/libs/modes")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/libs/multiprecision")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/libs/passhash")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/libs/pbkdf")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/libs/pkmodes")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/libs/pkpad")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/libs/pubkey")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/libs/random")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/libs/stream")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/libs/vdf")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/libs/zk")

add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/src/bls")