cmake_minimum_required(VERSION 3.5 FATAL_ERROR)

project(crypto3-scaffold)

add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/crypto3/libs/algebra")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/crypto3/libs/block")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/crypto3/libs/blueprint")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/crypto3/libs/codec")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/crypto3/libs/containers")
#add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/libs/ffi")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/crypto3/libs/hash")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/crypto3/libs/kdf")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/crypto3/libs/mac")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/crypto3/libs/marshalling/algebra")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/crypto3/libs/marshalling/core")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/crypto3/libs/marshalling/multiprecision")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/crypto3/libs/marshalling/zk")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/crypto3/libs/math")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/crypto3/libs/modes")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/crypto3/libs/multiprecision")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/crypto3/libs/passhash")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/crypto3/libs/pbkdf")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/crypto3/libs/pkmodes")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/crypto3/libs/pkpad")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/crypto3/libs/pubkey")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/crypto3/libs/random")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/crypto3/libs/stream")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/crypto3/libs/vdf")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/crypto3/libs/zk")

add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/src/bls")


